--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URL = mongodb+srv://22521209:kienquoc2102@cluster0.ikt5t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_ACCESS_KEY = myaccesskeyjwt
 JWT_REFRESH_KEY = myrefreshkeyjwt
+EMAIL_USER = kienquocit2102@gmail.com
+EMAIL_PASS = kienquoc2102
