--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGODB_URL = mongodb+srv://22521209:kienquoc2102@cluster0.ikt5t.mongodb.net/?re
 JWT_ACCESS_KEY = myaccesskeyjwt
 JWT_REFRESH_KEY = myrefreshkeyjwt
 EMAIL_USER = kienquocit2102@gmail.com
-EMAIL_PASS = kienquoc2102
+EMAIL_PASS = cnqg oyns faej wupn
